force-app/main/default/objects/AssessmentTemplateQuestionItem__c/AssessmentTemplateQuestionItem__c.object-meta.xml
<CustomObject>
    <label>Assessment Template Question Item</label>
    <nameField>
        <displayFormat>TI_{YYYYMMDD}_{000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>