force-app/main/default/objects/AssessmentTemplateQuestionItem__c/fields/AssessmentQuestionItemId__c.field-meta.xml
<CustomField>
    <fullName>AssessmentQuestionItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assessment Question Item</label>
    <referenceTo>AssessmentQuestionItem__c</referenceTo>
    <relationshipLabel>Assessment Template Question Item</relationshipLabel>
    <relationshipName>Assessment_Template_Question_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>