force-app/main/default/objects/AssessmentTemplateQuestionItem__c/fields/AssessmentTemplateQuestion__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplateQuestion__c</fullName>
    <label>Assessment Template Question</label>
    <referenceTo>AssessmentTemplateQuestion__c</referenceTo>
    <relationshipLabel>Assessment Template Question Item</relationshipLabel>
    <relationshipName>Assessment_Template_Question_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>